metadata-classic/objects/QualityAnalysis__c.object
<CustomObject>
    <fields>
        <fullName>CustomerCriticalScoreEmailT13__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;EmailT13SupportQA&apos;,
(
CASE( AppropriateMacro__c, 
&quot;No&quot;, 0.000, 
&quot;Yes&quot;, 1.800
,NULL)

+

CASE(  FollowThrough__c , 
&quot;No&quot;, 0.000, 
&quot;Yes&quot;, 1.800,
&quot;N/A&quot;, 0.000
,NULL)

+

CASE( AppropriateEscalation__c ,
&quot;No&quot;, 0.000,
&quot;Yes&quot;,1.350,
&quot;N/A&quot;, 0.000
,NULL)

+

CASE( TailorEmail__c ,
&quot;No&quot;, 0.000,
&quot;Yes&quot;,1.350
,NULL)

+

CASE( SmoothTransition__c ,
&quot;No&quot;, 0.000,
&quot;Yes&quot;,0.450,
&quot;N/A&quot;, 0.000
,NULL)

+

CASE( SpellingAndGrammar__c ,
&quot;No&quot;, 0.000,
&quot;Yes&quot;, 1.350
,NULL)

+

CASE( BugsAndFeedback__c ,
&quot;No&quot;, 0.000,
&quot;Yes&quot;, 0.450,
&quot;N/A&quot;, 0.000
,NULL)

+

CASE( CommunicationGuidelinesT13__c ,
&quot;No&quot;, 0.000,
&quot;Yes&quot;, 0.450
,NULL)
),0.000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Critical Score (Email T1-3)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerCriticalScoreEmailT45__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;EmailT45SupportQA&apos;,
(
CASE( Advocacy__c, 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.200,
&quot;3&quot;, 1.400,
&quot;4&quot;, 1.700,
&quot;5&quot;, 2.000
,NULL)

+

CASE( Communication__c, 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.400,
&quot;3&quot;, 1.700,
&quot;4&quot;, 2.000,
&quot;5&quot;, 2.400
,NULL)

+

CASE( 
ThumbtackKnowledge__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.900,
&quot;3&quot;, 1.000,
&quot;4&quot;, 1.200,
&quot;5&quot;, 1.400
,NULL)

+

CASE( 
FutureGuidance__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.700,
&quot;3&quot;, 0.800,
&quot;4&quot;, 1.000,
&quot;5&quot;, 1.200
,NULL)

+ 

CASE( 
PositiveLanguage__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.600,
&quot;3&quot;, 0.700,
&quot;4&quot;, 0.800,
&quot;5&quot;, 1.000
,NULL)
),
0.000)</formula>
        <label>Customer Critical Score (Email T4-5)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerCriticalScorePhone__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;PhoneSupportQA&apos;,
(
CASE( Advocacy__c, 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.618,
&quot;3&quot;, 1.887,
&quot;4&quot;, 2.292,
&quot;5&quot;, 2.696
,NULL)

+

CASE( 
Discovery__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.296, 
&quot;3&quot;, 1.512, 
&quot;4&quot;, 1.836, 
&quot;5&quot;, 2.160
,NULL)

+

CASE( 
ThumbtackKnowledge__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.696,
&quot;3&quot;, 0.812,
&quot;4&quot;, 0.986,
&quot;5&quot;, 1.160
,NULL)

+

CASE( 
FutureGuidance__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.619,
&quot;3&quot;, 0.722,
&quot;4&quot;, 0.877,
&quot;5&quot;, 1.032
,NULL)

+ 

CASE( 
PositiveLanguage__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.571,
&quot;3&quot;, 0.666,
&quot;4&quot;, 0.809,
&quot;5&quot;, 0.952
,NULL)
),
NULL)</formula>
        <label>Customer Critical Score (Phone)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerCriticalSectionPointsEarned__c</fullName>
        <description>The total number of points earned by the specialist for the questions in the Customer Critical section.</description>
        <inlineHelpText>The total number of points earned by the specialist for the questions in the Customer Critical section.</inlineHelpText>
        <label>Customer Critical Section Points Earned</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerCritical__c</fullName>
        <description>Calculated Customer Critical overall percentage.</description>
        <formula>(AdvocacyWeightedScore__c + DiscoveryWeightedScore__c + ThumbtackKnowledgeWeightedScore__c + FutureGuidanceWeightedScore__c + PositiveLanguageWeightedScore__c)/8</formula>
        <label>Customer Critical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DependableComments__c</fullName>
        <description>Comments about the Dependability competency.</description>
        <inlineHelpText>Comments about the Dependability competency.</inlineHelpText>
        <label>Dependable Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DependablePoints__c</fullName>
        <description>The points earned by the specialist for the Dependability competency.</description>
        <inlineHelpText>The points earned by the specialist for the Dependability competency.</inlineHelpText>
        <label>Dependable Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependable__c</fullName>
        <description>- We follow through on all promises made that impact the solution 
- We set the proper expectations for the Thumbtack experience, policies, and the actions we&apos;ll take</description>
        <inlineHelpText>- We follow through on all promises made that impact the solution 
- We set the proper expectations for the Thumbtack experience, policies, and the actions we&apos;ll take</inlineHelpText>
        <label>Dependable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DidWeAnswertheProsQuestionsComment__c</fullName>
        <label>Did We Answer the Pros Questions Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DidWeAnswertheProsQuestions__c</fullName>
        <label>Did We Answer the Pros Questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscoveryComments__c</fullName>
        <description>Comments about the discovery question.</description>
        <inlineHelpText>Comments about the discovery question.</inlineHelpText>
        <label>Discovery Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscoveryPoints__c</fullName>
        <description>The number of points earned by the specialist for the Discovery question.</description>
        <inlineHelpText>The number of points earned by the specialist for the Discovery question.</inlineHelpText>
        <label>Discovery Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscoveryWeightedScore__c</fullName>
        <description>Calculated weighed score of discovery question.</description>
        <formula>CASE( 
Discovery__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.296, 
&quot;3&quot;, 1.512, 
&quot;4&quot;, 1.836, 
&quot;5&quot;, 2.160 
,NULL)</formula>
        <label>Discovery Weighted Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery__c</fullName>
        <description>We understand the caller&apos;s immediate and underlying needs and identify the right solutions.</description>
        <inlineHelpText>We understand the caller&apos;s immediate and underlying needs and identify the right solutions.</inlineHelpText>
        <label>Discovery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DispositionPhoneCallComments__c</fullName>
        <description>Comments for Disposition Phone Call field.</description>
        <label>Disposition Phone Call Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DispositionPhoneCall__c</fullName>
        <description>-We disposition the phone call or attempt</description>
        <label>Disposition Phone Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentationComments__c</fullName>
        <description>Comments about Documentation question.</description>
        <inlineHelpText>Comments about Documentation question.</inlineHelpText>
        <label>Documentation Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentationFollowupComments__c</fullName>
        <label>Documentation &amp; Followup Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentationFollowup__c</fullName>
        <description>* Document the interaction in Tack including details of what actions were performed, troubleshooting steps taken, and promises made
* Categorize and set status to closed when appropriate
* Suggest BP updates, send feedback to product, and send follow up email when appropriate</description>
        <inlineHelpText>* Document the interaction in Tack including details of what actions were performed, troubleshooting steps taken, and promises made
* Categorize and set status to closed when appropriate
* Suggest BP updates, send feedback to product, follow up email</inlineHelpText>
        <label>Documentation &amp; Follow-up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentationPoints__c</fullName>
        <description>The points earned by the specialist for the Documentation question.</description>
        <inlineHelpText>The points earned by the specialist for the Documentation question.</inlineHelpText>
        <label>Documentation Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentationSectionNotes__c</fullName>
        <label>Documentation Section Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentationSectionPoints__c</fullName>
        <label>Documentation Section Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentationWeightedScore__c</fullName>
        <description>Calculated weighted score for documentation question.</description>
        <formula>CASE( 
Documentation__c , 
&quot;No&quot;, 0.000, 
&quot;Yes&quot;, 0.66667
,NULL)</formula>
        <label>Documentation Weighted Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <description>- We notate the purpose of the call, the information/resolution we provided, and any follow-up or promises made
- We categorize the case accurately based on the topic of conversation
- We use mentions when a specific product feature is discussed</description>
        <inlineHelpText>- We notate the purpose of the call, the information/resolution we provided, and any follow-up or promises made
- We categorize the case accurately based on the topic of conversation
- We use mentions when a specific product feature is discussed</inlineHelpText>
        <label>Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmpathyPoints__c</fullName>
        <label>Empathy Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engage__c</fullName>
        <description>Not just what we say but how we say it. We were engaged with the user. We respond appropriately to user cue. We speak with confidence. We tailor or communication style to user’s experience and personality.</description>
        <inlineHelpText>Not just what we say but how we say it. We were engaged with the user. We respond appropriately to user cue. We speak with confidence. We tailor or communication style to user’s experience and personality.</inlineHelpText>
        <label>Engage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngagetheCallerComments__c</fullName>
        <label>Engage the Caller Comments</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EngagetheCaller__c</fullName>
        <label>Engage the Caller</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngagetheChatComments__c</fullName>
        <label>Engage the Chat Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EngagetheChat__c</fullName>
        <label>Engage the Chat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentActionsComments__c</fullName>
        <label>Enrollment Actions Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnrollmentActions__c</fullName>
        <label>Enrollment Actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Quality Analyses</relationshipLabel>
        <relationshipName>Quality_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EscalateTroubleshootComments__c</fullName>
        <label>Escalate/Troubleshoot Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EscalateTroubleshootIssues__c</fullName>
        <description>* Exhaust all troubleshooting steps as outlined in the appropriate BP
* Follow the appropriate BP when escalating the ticket (MI, bugs, etc.)
* Let the caller know appropriate expectations for when issue will be resolved</description>
        <inlineHelpText>* Exhaust all troubleshooting steps as outlined in the appropriate BP
* Follow the appropriate BP when escalating the ticket (MI, bugs, etc.)
* Let the caller know appropriate expectations for when issue will be resolved</inlineHelpText>
        <label>Escalate/Troubleshoot Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EscalationProcedureComments__c</fullName>
        <description>Open text area to enter comments for the specialist about the Escalation Procedure competency question.</description>
        <inlineHelpText>Open text area to enter comments for the specialist about the Escalation Procedure competency question.</inlineHelpText>
        <label>Escalation Procedure Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EscalationProcedurePoints__c</fullName>
        <description>The number of points earned for the Escalation Procedure competency question.</description>
        <inlineHelpText>The number of points earned for the Escalation Procedure competency question.</inlineHelpText>
        <label>Escalation Procedure Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationProcedure__c</fullName>
        <description>We escalate the case when appropriate using the proper procedure to the correct department (for bugs, product feedback, MI issues, manager requests).</description>
        <inlineHelpText>We escalate the case when appropriate using the proper procedure to the correct department (for bugs, product feedback, MI issues, manager requests).</inlineHelpText>
        <label>Escalation Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluationType__c</fullName>
        <description>The type of evaluation performed.</description>
        <inlineHelpText>The type of evaluation performed.</inlineHelpText>
        <label>Evaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Support</fullName>
                </value>
                <value>
                    <fullName>Chat Support</fullName>
                </value>
                <value>
                    <fullName>Tier 1-3 Email Support</fullName>
                </value>
                <value>
                    <fullName>Tier 4-5 Email Support</fullName>
                </value>
                <value>
                    <fullName>Correspondence Support (TSL)</fullName>
                </value>
                <value>
                    <fullName>Tier 4 Email Support</fullName>
                </value>
                <value>
                    <fullName>SMS Text Support</fullName>
                </value>
                <value>
                    <fullName>Chat/Text Support</fullName>
                </value>
                <value>
                    <fullName>Email Support</fullName>
                </value>
                <value>
                    <fullName>TPH Phone Support</fullName>
                </value>
                <value>
                    <fullName>Marketplace Trust &amp; Safety</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Proactive Retention</fullName>
                </value>
                <value>
                    <fullName>Reactive Retention</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeedbackComments__c</fullName>
        <description>Comments for Feedback field.</description>
        <label>Feedback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>-We submit any feedback the professional has including positive and negative feedback on each of the questions applicable in the Google Form
-Feedback genuiely aligns w/ pro&apos;s concerns or #loveits on the call</description>
        <label>Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FollowThroughComments__c</fullName>
        <label>Follow Through Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FollowThroughPoints__c</fullName>
        <description>The points earned by the specialist for the Follow Through question.</description>
        <inlineHelpText>The points earned by the specialist for the Follow Through question.</inlineHelpText>
        <label>Follow Through Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowThrough__c</fullName>
        <inlineHelpText>Did the specialist follow through on promises made?</inlineHelpText>
        <label>Follow Through</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FutureGuidanceComments__c</fullName>
        <description>Comments about the Future Guidance Comments.</description>
        <inlineHelpText>Comments about the Future Guidance Comments.</inlineHelpText>
        <label>Future Guidance Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FutureGuidancePoints__c</fullName>
        <description>The number of points earned by the specialist for the Future Guidance question.</description>
        <inlineHelpText>The number of points earned by the specialist for the Future Guidance question.</inlineHelpText>
        <label>Future Guidance Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FutureGuidanceWeightedScore__c</fullName>
        <description>Calculated weighted score of Future Guidance question.</description>
        <formula>CASE( 
FutureGuidance__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.619,
&quot;3&quot;, 0.722,
&quot;4&quot;, 0.877,
&quot;5&quot;, 1.032
,NULL)</formula>
        <label>Future Guidance Weighted Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FutureGuidance__c</fullName>
        <description>Future Guidance means addressing underlying issues and teaching them something new that will help in their future use of Thumbtack.</description>
        <inlineHelpText>Future Guidance means addressing underlying issues and teaching them something new that will help in their future use of Thumbtack.</inlineHelpText>
        <label>Future Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralComments__c</fullName>
        <description>General comments about the interaction</description>
        <inlineHelpText>General comments about the interaction</inlineHelpText>
        <label>General Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GettingToDoneComments__c</fullName>
        <description>Open text area to store feedback comments about how the agent handled the Getting to Done competency.</description>
        <inlineHelpText>Comments about the getting to done competency.</inlineHelpText>
        <label>Getting to Done Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GettingToDonePoints__c</fullName>
        <description>The points earned by the specialist for the Getting to Done question.</description>
        <inlineHelpText>The points earned by the specialist for the Getting to Done question.</inlineHelpText>
        <label>Getting to Done Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GettingToDone__c</fullName>
        <description>We use active listening, probing questions, and account research to understand the best and most applicable ways to get the pro/customer to done.</description>
        <inlineHelpText>We use active listening, probing questions, and account research to understand the best and most applicable ways to get the pro/customer to done.</inlineHelpText>
        <label>Getting to Done</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greeting_Comments__c</fullName>
        <label>Greeting Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Greeting__c</fullName>
        <description>* Know who you&apos;re talking to
* Introduce yourself and let them know where they&apos;re calling
* Offer to be #super-helpful
* For outbound calls: State the call is taking place on a &quot;recorded line&quot;</description>
        <inlineHelpText>* Know who you&apos;re talking to
* Introduce yourself and let them know where they&apos;re calling
* Offer to be #super-helpful
* For outbound calls: State the call is taking place on a &quot;recorded line&quot;</inlineHelpText>
        <label>Greeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HelpfulComments__c</fullName>
        <label>Helpful Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Helpful__c</fullName>
        <description>Understood issue and provided appropriate solution(s) to get best resolution. Used Effective judgement to help the user to a resolution through the simplest and easiest routes. We exhaust all possible solutions when a resolution can not be met.</description>
        <inlineHelpText>Understood issue and provided appropriate solution(s) to get best resolution. Used Effective judgement to help the user to a resolution through the simplest and easiest routes. We exhaust all possible solutions when a resolution can not be met.</inlineHelpText>
        <label>Helpful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HoldDeadAirTimePoints__c</fullName>
        <label>Hold / Dead Air Time Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoldDeadAirTime__c</fullName>
        <label>Hold/Dead Air Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HonestandEncouraging__c</fullName>
        <description>We are radically honest and encouraging *</description>
        <inlineHelpText>We are radically honest and encouraging *</inlineHelpText>
        <label>Honest and Encouraging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifyImmediateIssueComments__c</fullName>
        <label>Identify Immediate Issue Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IdentifyImmediateIssue__c</fullName>
        <description>* Figure out why the pro/customer is calling
* Understand what the caller needs done immediately</description>
        <inlineHelpText>* Figure out why the pro/customer is calling
* Understand what the caller needs done immediately</inlineHelpText>
        <label>Identify Immediate Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifyNeedsComments__c</fullName>
        <label>Identify Needs Comments</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IdentifyNeeds__c</fullName>
        <label>Identify Needs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>